// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerPanel general rendering #isError 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "initialFocus": ".c-explorer__header__title",
      "onDeactivate": [MockFunction],
    }
  }
  paused={false}
>
  <div
    className="explorer"
    role="dialog"
  >
    <Button
      className="c-explorer__close"
    >
      Close explorer
    </Button>
    <Transition
      className="c-explorer"
      component="nav"
      duration={210}
      label="Page explorer"
      name="push"
    >
      <div
        className="c-transition-group"
        key="1"
      >
        <ExplorerHeader
          depth={1}
          gotoPage={[MockFunction]}
          onClick={[Function]}
          page={
            Object {
              "children": Object {
                "items": Array [],
              },
              "isError": true,
              "meta": Object {
                "parent": null,
              },
            }
          }
        />
        <div
          className="c-explorer__drawer"
        >
          <div
            key="children"
          />
          <div
            className="c-explorer__placeholder"
            key="error"
          >
            Server Error
          </div>
        </div>
        <PageCount
          page={
            Object {
              "children": Object {
                "items": Array [],
              },
              "isError": true,
              "meta": Object {
                "parent": null,
              },
            }
          }
        />
      </div>
    </Transition>
  </div>
</FocusTrap>
`;

exports[`ExplorerPanel general rendering #isFetching 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "initialFocus": ".c-explorer__header__title",
      "onDeactivate": [MockFunction],
    }
  }
  paused={false}
>
  <div
    className="explorer"
    role="dialog"
  >
    <Button
      className="c-explorer__close"
    >
      Close explorer
    </Button>
    <Transition
      className="c-explorer"
      component="nav"
      duration={210}
      label="Page explorer"
      name="push"
    >
      <div
        className="c-transition-group"
        key="1"
      >
        <ExplorerHeader
          depth={1}
          gotoPage={[MockFunction]}
          onClick={[Function]}
          page={
            Object {
              "children": Object {
                "items": Array [],
              },
              "isFetching": true,
              "meta": Object {
                "parent": null,
              },
            }
          }
        />
        <div
          className="c-explorer__drawer"
        >
          <div
            key="children"
          />
        </div>
      </div>
    </Transition>
  </div>
</FocusTrap>
`;

exports[`ExplorerPanel general rendering #items 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "initialFocus": ".c-explorer__header__title",
      "onDeactivate": [MockFunction],
    }
  }
  paused={false}
>
  <div
    className="explorer"
    role="dialog"
  >
    <Button
      className="c-explorer__close"
    >
      Close explorer
    </Button>
    <Transition
      className="c-explorer"
      component="nav"
      duration={210}
      label="Page explorer"
      name="push"
    >
      <div
        className="c-transition-group"
        key="1"
      >
        <ExplorerHeader
          depth={1}
          gotoPage={[MockFunction]}
          onClick={[Function]}
          page={
            Object {
              "children": Object {
                "items": Array [
                  1,
                  2,
                ],
              },
            }
          }
        />
        <div
          className="c-explorer__drawer"
        >
          <div
            key="children"
          >
            <ExplorerItem
              item={
                Object {
                  "admin_display_title": "Test",
                  "id": 1,
                  "meta": Object {
                    "status": Object {},
                    "type": "test",
                  },
                }
              }
              key="1"
              onClick={[Function]}
            />
            <ExplorerItem
              item={
                Object {
                  "admin_display_title": "Foo",
                  "id": 2,
                  "meta": Object {
                    "status": Object {},
                    "type": "foo",
                  },
                }
              }
              key="2"
              onClick={[Function]}
            />
          </div>
        </div>
      </div>
    </Transition>
  </div>
</FocusTrap>
`;

exports[`ExplorerPanel general rendering no children 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "initialFocus": ".c-explorer__header__title",
      "onDeactivate": [MockFunction],
    }
  }
  paused={false}
>
  <div
    className="explorer"
    role="dialog"
  >
    <Button
      className="c-explorer__close"
    >
      Close explorer
    </Button>
    <Transition
      className="c-explorer"
      component="nav"
      duration={210}
      label="Page explorer"
      name="push"
    >
      <div
        className="c-transition-group"
        key="1"
      >
        <ExplorerHeader
          depth={1}
          gotoPage={[MockFunction]}
          onClick={[Function]}
          page={
            Object {
              "children": Object {},
            }
          }
        />
        <div
          className="c-explorer__drawer"
        >
          <div
            className="c-explorer__placeholder"
            key="empty"
          >
            No results
          </div>
        </div>
      </div>
    </Transition>
  </div>
</FocusTrap>
`;

exports[`ExplorerPanel general rendering renders 1`] = `
<FocusTrap
  _createFocusTrap={[Function]}
  active={true}
  focusTrapOptions={
    Object {
      "initialFocus": ".c-explorer__header__title",
      "onDeactivate": [MockFunction],
    }
  }
  paused={false}
>
  <div
    className="explorer"
    role="dialog"
  >
    <Button
      className="c-explorer__close"
    >
      Close explorer
    </Button>
    <Transition
      className="c-explorer"
      component="nav"
      duration={210}
      label="Page explorer"
      name="push"
    >
      <div
        className="c-transition-group"
        key="1"
      >
        <ExplorerHeader
          depth={1}
          gotoPage={[MockFunction]}
          onClick={[Function]}
          page={
            Object {
              "children": Object {
                "items": Array [],
              },
              "meta": Object {
                "parent": null,
              },
            }
          }
        />
        <div
          className="c-explorer__drawer"
        >
          <div
            key="children"
          />
        </div>
      </div>
    </Transition>
  </div>
</FocusTrap>
`;
